Added ED - first commit

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
   <link href="assets/CSS/index.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <title>FluxIM</title>
+  <title>Eidendale</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><b>Flux IM</b></a>
+      <a class="navbar-brand" href="/"><b>Eidendale</b></a>
       <div id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -27,7 +27,7 @@
 
   <div class="home-container">
     <header class="home-header">
-      <h1>Flux IM</h1>
+      <h1>Eidendale</h1>
     </header>
     <main class="home-main">
       <form class="login">
