--- a/public/chatroom.html
+++ b/public/chatroom.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FluxIM: Chatroom</title>
+  <title>Eidendale: Chatroom</title>
   <script src="js/jquery-3.5.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -19,7 +19,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mySidepanel">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/"><b>Flux IM</b></a>
+      <a class="navbar-brand" href="/"><b>Eidendale</b></a>
       <div id="navbarNav" class="navbar-nav">
         <button class="btn nav-link active" aria-current="page" id="logoutBtn">Log out</button>
       </div>
