--- a/public/signup.html
+++ b/public/signup.html
@@ -12,13 +12,13 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
   <script src="./assets/JavaScript/signup.js" defer></script>
-  <title>FluxIM</title>
+  <title>Eidendale</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><b>Flux IM</b></a>
+      <a class="navbar-brand" href="/"><b>Eidendale</b></a>
       <div id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
