--- a/public/chatroom.html
+++ b/public/chatroom.html
@@ -127,6 +127,7 @@
 
   <script src="assets/JavaScript/socket.io.js"></script>
   <script src="assets/JavaScript/chatroom.js"></script>
+  <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/BrowserFS/2.0.0/browserfs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
