Removed files not needed. Cleaned up code. Reorganized parts of the DB.

--- a/public/home.html
+++ b/public/home.html
@@ -1,4 +1,4 @@
-I have successfully logged in! Yay.
+Yay, I have logged in.
 <br>
 Its me: <span id="characterInfo"></span>
 <br>
@@ -6,7 +6,7 @@ Its me: <span id="characterInfo"></span>
 
 <div id="noticeboard"></div>
 
-<p>Would you like to to <a href="add-topic.html">add a topic</a></p>
+<p>Would you like to add a post please click below? :)
 
 <div id="first" class="home-container">
 <label>Title</label>
