Removed files not needed. Cleaned up code. Reorganized parts of the DB.

--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,8 @@
 Yay, I have logged in.
 <br>
 Its me: <span id="characterInfo"></span>
+
+Click to go to  <a href="profiles.html">profile page</a>
 <br>
 <h2>NoticeBoard</h2>
 
